# c94m8p

./: CMakeLists.txt  README.md
include/: c94m8p.hpp
include/packet/: nmea_packet.hpp  packet.hpp  ubx_packet.hpp
include/protocols/: nmea_common.hpp  ubx_ack.hpp  ubx_cfg_msg.hpp  ubx_cfg_prt.hpp  ubx_common.hpp  ubx_nav_status.hpp  ubx_nav_svin.hpp
include/utils/: serial.hpp
src/: c94m8p.cpp
src/packet/: nmea_packet.cpp  packet.cpp  ubx_packet.cpp
src/utils/: serial.cpp
test/: default.cpp
